--- a/css/main.css
+++ b/css/main.css
@@ -370,6 +370,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
   width: 100%;
   min-height: 100vh;
@@ -443,5 +447,8 @@ body {
     text-align: center;
     font-size: 7rem;
     position: absolute; }
+
+.history {
+  border: 1px solid #000; }
 
 /*# sourceMappingURL=main.css.map */
