--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap");
 
 @import "normalize";
 @import "variables";
@@ -53,7 +53,7 @@ body {
       font-size: 1.125rem;
       background-color: #fff;
       color: #000;
-      margin-bottom: 30px;
+      margin-bottom: 2rem;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       
 
@@ -63,6 +63,14 @@ body {
     }
 
     &--remove {
+      margin-bottom: 1rem;
+
+      &:hover {
+        background-color: $color-water;
+      }
+    }
+    
+    &--archive {
 
       &:hover {
         background-color: $color-water;
@@ -99,24 +107,31 @@ body {
   }
 }
 
-.history {
+.archive {
   width: 100%;
   max-width: 500px;
-  font-weight: 400;
-  margin: 2rem 0;
+  font-weight: 300;
+  margin: 0;
+  overflow: hidden;
+  height: 0;
+  transition: margin 1s, height 1s;
+
+  &--visible {
+    margin: 2rem 0;
+  }
 
   &__list {
     list-style: none;
     padding: 0;
     margin: 0;
     width: 100%;
-    
+    height: auto;
   }
 
   &__item {
     @include flex-center;
     justify-content: space-between;
-    padding: 0.5rem 1rem;
+    padding: 0.4rem 1rem;
 
     &:nth-child(even) {
       background-color: rgba($color: #fff, $alpha: 0.05);
@@ -125,5 +140,15 @@ body {
     &:not(:last-child) {
       border-bottom: 1px solid $color-grey;
     }
+  }
+
+  &__key {
+
+    margin: 0;
+  }
+  
+  &__value {
+
+    margin: 0;
   }
 }
