--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -130,8 +130,10 @@ body {
   }
 
   &__item {
-    @include flex-center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr repeat(2, auto);
+    grid-column-gap: 1rem;
+    align-items: center;
     padding: 0.4rem 1rem;
 
     &:nth-child(even) {
@@ -155,4 +157,15 @@ body {
 .indicator {
   display: flex;
 
+  &__section {
+    display: block;
+    background-color: $color-grey;
+    width: 0.3rem;
+    height: 1rem;
+    border-radius: 1rem;
+
+    &:not(:last-child) {
+      margin-right: 0.3rem;
+    }
+  }
 }
