--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,9 @@
 $color-background: #3767AD;
 $color-water: #2196f3;
 $color-grey: #ccc;
+$color-low: rgb(221, 75, 30);
+$color-medium: rgb(224, 152, 17);
+$color-high: rgb(89, 240, 18);
+
 
 $time-hover-effect: 0.2s;
