--- a/css/main.css
+++ b/css/main.css
@@ -461,6 +461,7 @@ body {
   margin: 0;
   overflow: hidden;
   height: 0;
+  height: auto;
   -webkit-transition: margin 1s, height 1s;
   -o-transition: margin 1s, height 1s;
   transition: margin 1s, height 1s; }
@@ -473,26 +474,41 @@ body {
     width: 100%;
     height: auto; }
   .archive__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr (auto)[2];
+    grid-template-columns: 1fr repeat(2, auto);
+    grid-column-gap: 1rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     padding: 0.4rem 1rem; }
     .archive__item:nth-child(even) {
       background-color: rgba(255, 255, 255, 0.05); }
     .archive__item:not(:last-child) {
       border-bottom: 1px solid #ccc; }
-  .archive__key {
+  .archive__date {
     margin: 0; }
   .archive__value {
     margin: 0; }
+
+.indicator {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .indicator__section {
+    display: block;
+    background-color: #ccc;
+    width: 0.3rem;
+    height: 1rem;
+    border-radius: 1rem; }
+    .indicator__section:not(:last-child) {
+      margin-right: 0.3rem; }
+    .indicator__section--low {
+      background-color: #dd4b1e; }
+    .indicator__section--medium {
+      background-color: #e09811; }
+    .indicator__section--high {
+      background-color: #59f012; }
 
 /*# sourceMappingURL=main.css.map */
