--- a/css/main.css
+++ b/css/main.css
@@ -461,6 +461,7 @@ body {
   margin: 0;
   overflow: hidden;
   height: 0;
+  height: 100%;
   -webkit-transition: margin 1s, height 1s;
   -o-transition: margin 1s, height 1s;
   transition: margin 1s, height 1s; }
