--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
+@import url('https://use.fontawesome.com/releases/v5.8.2/css/all.css');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap");
 
 @import "normalize";
@@ -131,7 +132,7 @@ body {
 
   &__item {
     display: grid;
-    grid-template-columns: 1fr repeat(2, auto);
+    grid-template-columns: 1fr repeat(3, auto);
     grid-column-gap: 1rem;
     align-items: center;
     padding: 0.4rem 1rem;
@@ -157,6 +158,20 @@ body {
   
   &__value {
     margin: 0;
+  }
+}
+
+.edition {
+
+  &__edit {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+  }
+
+  &__icon {
+    color: #fff;
   }
 }
 
