--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,5 +5,6 @@ $color-low: rgb(221, 75, 30);
 $color-medium: rgb(224, 152, 17);
 $color-high: rgb(89, 240, 18);
 
+$size-archive-buttons: 20px;
 
 $time-hover-effect: 0.2s;
