--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,13 +22,6 @@ body {
   color: #fff;
 }
 
-.button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 0;
-}
-
 .app {
   @include flex-center;
   flex-direction: column;
@@ -168,11 +161,20 @@ body {
   }
 }
 
+.button {
+  @include flex-center;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  width: $size-archive-buttons;
+  height: $size-archive-buttons;
+}
+
 .edition {
   @include flex-center;
 
   &__edit {
-    @include flex-center;
   }
 
   &__icon {
@@ -182,23 +184,12 @@ body {
   &__group {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    column-gap:5px;
+    column-gap: 5px;
   }
 
-  &__decrease {
-    @include flex-center;
-  }
-  
+  &__decrease,
   &__increase {
-    @include flex-center;
-  }
-  
-  &__cancel {
-    @include flex-center;
-  }
-  
-  &__save {
-    @include flex-center;
+    transform: scale(1.5);
   }
 }
 
@@ -209,7 +200,7 @@ body {
     display: block;
     background-color: $color-grey;
     width: 0.3rem;
-    height: 1rem;
+    height: $size-archive-buttons;
     border-radius: 1rem;
 
     &:not(:last-child) {
