--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,262 +1,12 @@
 @import url('https://use.fontawesome.com/releases/v5.8.2/css/all.css');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap");
 
-@import "normalize";
-@import "variables";
-@import "mixins";
-@import "helpers";
+@import "00_normalize.scss";
+@import "01_helpers.scss";
 
-html {
-  box-sizing: border-box;
-}
+@import "03_variables.scss";
+@import "04_mixins.scss";
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body {
-  font-family: "Roboto", Arial, sans-serif;
-  font-weight: medium;
-  color: #fff;
-}
-
-.page-overlay {
-  background-color: rgba($color: #000, $alpha: 0.5);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  visibility: hidden;
-
-  &--visible {
-    visibility: visible;
-  }
-}
-
-.app {
-  @include flex-center;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  min-height: 100vh;
-  background-color: $color-background;
-  padding: 1rem;
-
-  &__container {
-    @include flex-center;
-    width: 60%;
-    max-width: 1200px;
-    margin-top: 6rem;
-    flex-direction: column;
-  }
-
-  &__button {
-    background: none;
-    border: none;
-    border-radius: 4px;
-    padding: 12px;
-    min-width: 200px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 0.875rem;
-    transition: box-shadow $time-hover-effect, background-color $time-hover-effect;
-
-    &--add {
-      font-size: 1.125rem;
-      background-color: #fff;
-      color: #000;
-      margin-bottom: 2rem;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      
-
-      &:hover {
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
-      }
-    }
-
-    &--remove {
-      margin-bottom: 1rem;
-
-      &:hover {
-        background-color: $color-water;
-      }
-    }
-    
-    &--archive {
-
-      &:hover {
-        background-color: $color-water;
-      }
-    }
-  }
-}
-
-.navigation {
-
-  &__list {
-    list-style-type: none;
-  }
-
-  &__item {
-
-  }
-
-  &__button {
-
-  }
-}
-
-.glass {
-  @include flex-center;
-  position: relative;
-
-  &__svg {
-    width: 100%;
-    max-height: 400px;
-    margin-bottom: 48px;
-  }
-
-  &__fill {
-    fill: $color-water;
-  }
-
-  &__outline {
-    fill: none;
-    stroke: #fff;
-    stroke-width: 10px;
-  }
-
-  &__counter {
-    margin: 0;
-    text-align: center;
-    font-size: 7rem;
-    position: absolute;
-  }
-}
-
-.archive {
-  width: 100%;
-  max-width: 500px;
-  font-weight: 300;
-  margin: 0;
-  overflow: hidden;
-  height: 0;
-  transition: margin 0.5s, height 0.5s;
-
-  &--visible {
-    margin: 2rem 0;
-  }
-
-  &__list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: auto;
-  }
-
-  &__item {
-    display: grid;
-    grid-template-columns: 1fr repeat(3, auto);
-    grid-column-gap: 1rem;
-    align-items: center;
-    padding: 0.4rem 1rem;
-    border: 1px solid transparent;
-
-    &--empty {
-      text-align: center;
-      font-style: italic;
-      @include flex-center;
-    }
-
-    &:nth-child(even) {
-      background-color: rgba($color: #fff, $alpha: 0.05);
-    }
-    
-    &:not(:last-child) {
-      border-bottom: 1px solid $color-grey;
-    }
-  }
-
-  & &__item--on-top { // overriding higher specificity selectors
-    background-color: darken($color-background, 30%);
-    position: relative;
-    z-index: 1;
-    border-color: #fff;
-  }
-
-  &__date {
-    margin: 0;
-  }
-  
-  &__value {
-    margin: 0;
-  }
-}
-
-.edition {
-  @include flex-center;
-
-  &__button {
-    @include flex-center;
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    width: $size-archive-buttons;
-    height: $size-archive-buttons;
-
-    &--hidden {
-      display: none;
-    }
-  }
-
-  &__svg {
-    width: 100%;
-    height: 100%;
-    fill: #fff;
-    pointer-events: none;
-  }
-
-  &__group {
-    display: none;
-
-    &--visible {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      column-gap: 5px;
-    }
-  }
-}
-
-.indicator {
-  display: flex;
-
-  &__section {
-    display: block;
-    background-color: $color-grey;
-    width: 0.3rem;
-    height: $size-archive-buttons;
-    border-radius: 1rem;
-
-    &:not(:last-child) {
-      margin-right: 0.3rem;
-    }
-
-    &--low {
-      background-color: $color-low;
-    }
-
-    &--medium {
-      background-color: $color-medium;
-    }
-
-    &--high {
-      background-color: $color-high;
-    }
-  }
-}
+@import "06_overall.scss";
+@import "07_app.scss";
+@import "08_archive.scss";
