refactor(scss): comments for sections

--- a/src/scss/07_app.scss
+++ b/src/scss/07_app.scss
@@ -1,3 +1,4 @@
+//////////////////////////////////////////////////////////// MAIN APP INTERFACE
 .app {
   @include flex-center;
   flex-direction: column;
@@ -52,7 +53,7 @@
     }
   }
 }
-
+//////////////////////////////////////////////////////////////////// NAVIGATION
 .navigation {
 
   &__list {
@@ -67,7 +68,7 @@
 
   }
 }
-
+///////////////////////////////////////////////////////////////////////// GLASS
 .glass {
   @include flex-center;
   position: relative;
