--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -1,3 +1,4 @@
+/////////////////////////////////////////////////////////////////////// ARCHIVE
 .archive {
   width: 100%;
   max-width: 500px;
@@ -57,7 +58,7 @@
     margin: 0;
   }
 }
-
+////////////////////////////////////////////////////////////////// EDITION MODE
 .edition {
   @include flex-center;
 
@@ -89,7 +90,7 @@
     }
   }
 }
-
+//////////////////////////////////////////////////////////////////// INDICATORS
 .indicator {
   display: flex;
 
