--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -1,15 +1,17 @@
 /////////////////////////////////////////////////////////////////////// ARCHIVE
 .archive {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  max-width: 500px;
+  background-color: $color-background;
   font-weight: 300;
-  margin: 0;
-  overflow: hidden;
-  height: 0;
-  transition: margin 0.5s, height 0.5s;
+  visibility: hidden;
+  padding: 4rem 1rem 1rem;
 
   &--visible {
-    margin: 2rem 0;
+    visibility: visible;
   }
 
   &__list {
@@ -17,7 +19,8 @@
     padding: 0;
     margin: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
+    overflow: auto;
   }
 
   &__item {
@@ -25,7 +28,7 @@
     grid-template-columns: 1fr repeat(3, auto);
     grid-column-gap: 1rem;
     align-items: center;
-    padding: 0.4rem 1rem;
+    padding: 0.4rem 0;
     border: 1px solid transparent;
 
     &--empty {
