--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -7,10 +7,12 @@
   width: 100%;
   background-color: $color-background;
   font-weight: 300;
+  display: none;
   visibility: hidden;
   padding: 4rem 1rem 1rem;
 
   &--visible {
+    display: flex;
     visibility: visible;
   }
 
@@ -44,7 +46,7 @@
   &__item {
     display: grid;
     grid-template-columns: 1fr repeat(3, auto);
-    grid-column-gap: 1rem;
+    grid-column-gap: 0.5rem;
     align-items: center;
     padding: 0.4rem 0;
     border: 1px solid transparent;
@@ -77,6 +79,11 @@
   
   &__value {
     margin: 0;
+    @include flex-center;
+    width: $size-archive-buttons;
+    height: $size-archive-buttons;
+    border: 2px solid #fff;
+    border-radius: 50%;
   }
 }
 ////////////////////////////////////////////////////////////////// EDITION MODE
@@ -113,29 +120,26 @@
 }
 //////////////////////////////////////////////////////////////////// INDICATORS
 .indicator {
-  display: flex;
+  @include flex-center;
+  position: relative;
+  width: $size-archive-buttons;
+  height: $size-archive-buttons;
 
-  &__section {
-    display: block;
-    background-color: $color-grey;
-    width: 0.3rem;
+  &__svg {
+    @include flex-center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
     height: $size-archive-buttons;
-    border-radius: 1rem;
+    visibility: hidden;
+    fill: #fff;
 
-    &:not(:last-child) {
-      margin-right: 0.3rem;
-    }
-
-    &--low {
-      background-color: $color-low;
-    }
-
-    &--medium {
-      background-color: $color-medium;
-    }
-
-    &--high {
-      background-color: $color-high;
+    &--visible {
+      visibility: visible;
     }
   }
 }
