--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -5,6 +5,9 @@ $color-low: rgb(221, 75, 30);
 $color-medium: rgb(224, 152, 17);
 $color-high: rgb(89, 240, 18);
 
+$color-emoticon-low: rgb(221, 75, 30);
+$color-emoticon-hight: rgb(89, 240, 18);
+
 $size-archive-buttons: 30px;
 
 $time-hover-effect: 0.2s;
