--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -8,6 +8,12 @@ $color-high: rgb(89, 240, 18);
 $color-emoticon-low: rgb(221, 75, 30);
 $color-emoticon-hight: rgb(89, 240, 18);
 
-$size-archive-buttons: 30px;
+$size-xs-archive-buttons: 25px;
+$size-sm-archive-buttons: 30px;
+
+$media-sm: 360px;
+$media-md: 768px;
+$media-lg: 1024px;
 
 $time-hover-effect: 0.2s;
+$time-edit-mode: 0.2s;
