--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -17,6 +17,7 @@ $media-lg: 1024px;
 
 $time-hover-effect: 0.2s;
 $time-edit-mode: 0.2s;
+$time-edit-buttons: 0.5s;
 
 $edit-group-cols: 4;
 $edit-group-col-gap: 5px;
