--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -9,6 +9,9 @@
   font-weight: 300;
   display: none;
   visibility: hidden;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   padding-top: 4rem;
 
   &--visible {
@@ -41,20 +44,17 @@
 
   &__list {
     list-style: none;
-    padding: 1rem;
+    padding: 0 1rem;
     margin: 0;
+    margin-top: 1rem;
     width: 100%;
     height: 100%;
     overflow: auto;
-
-    &::after {
-      content: "";
-      padding: 0.5rem;
-    }
+    scroll-behavior: smooth;
   }
 
   &__item {
-    display: grid;
+    display: none;
     grid-template-columns: 1fr repeat(3, auto);
     grid-column-gap: $edit-group-col-gap;
     align-items: center;
@@ -62,6 +62,10 @@
     border-top: 1px solid transparent;
     border-bottom: 1px solid transparent;
     transition: box-shadow $time-edit-mode;
+
+    &--visible {
+      display: grid;
+    }
 
     &--empty {
       text-align: center;
@@ -102,6 +106,24 @@
     @media only screen and (min-width: $media-sm) {
       width: $size-sm-archive-buttons;
       height: $size-sm-archive-buttons;
+    }
+  }
+
+  &__button {
+    padding: 0.6rem 1rem;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 1rem;
+    transition: background-color $time-hover-effect;
+    margin: 1rem 0;
+    visibility: visible;
+
+    &--hidden {
+      visibility: hidden;
+    }
+
+    &:hover {
+      background-color: $color-water;
     }
   }
 }
